apps/tdarr/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  labels:
    app.kubernetes.io/name: tdarr
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: tdarr
