apps/tdarr/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  labels:
    app.kubernetes.io/name: tdarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    flame.pawelmalak/icon: multimedia
    flame.pawelmalak/name: tdarr
    flame.pawelmalak/type: app
    flame.pawelmalak/url: https://tdarr.claytonc.dev
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-external
  tls:
    - hosts:
        - "tdarr.claytonc.dev"
      secretName: "tdarr-tls"
  rules:
    - host: "tdarr.claytonc.dev"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: tdarr
                port:
                  number: 80
